2009-04-06  Marek Habersack  <mhabersack@novell.com>

	* TreeView.js: TreeView_ToggleExpand now takes more parameters - a
	full definition of treeview's node contents.
	Added new function, TreeView_PopulateNode, which partially takes
	over role of the PopulateNode function generated in
	TreeView.OnPreRender (see below). Fixes bug #492307

	* TreeView.cs: RaiseCallbackEvent needs to recreate the event
	target's parental tree all the way from the root to the node and
	populate only the leaf (requested) node. This avoids calling the
	TreeNodePopulate handler more times than needed. Fixes bug #492307
	OnPreRender: moved the script code to constants and the script
	body is now generated using StringBuilder instead of a series of
	String.Format calls.
	GetClientExpandEvent: adjusted code for new TreeView JavaScript
	API.

2009-03-17  Marek Habersack  <mhabersack@novell.com>

	* Unit.cs: introduced a field to tell the difference between empty
	(as in Unit.Empty) and 0px units.

2009-03-06  Marek Habersack  <mhabersack@novell.com>

	* WebControl.cs: if savedState is not an instance of Pair in
	LoadViewState, do not attempt to load from it.

2009-02-10  Marek Habersack  <mhabersack@novell.com>

	* ImageButton.cs: AddAttributesToRender renders the onclick
	attribute only if any of the following is true:
	  - OnClientClick is not empty
	  - Validation is enabled for the control
	  - PostBackUrl is used
	PostBackOptions now indicate that control requires the javascript
	protocol for the handler.
	RaisePostBackEvent passes String.Empty as the argument.
	Fixes bug #463939

2009-02-09  Marek Habersack  <mhabersack@novell.com>

	* ObjectDataSourceView.cs: ExecuteSelect returns a single-item
	array of objects containing the result, if the result isn't one of
	DataSet, DataTable or IEnumerable. Fixes bug #471767

2009-02-06  Marek Habersack  <mhabersack@novell.com>

	* Style.cs: if CssClass is null, return String.Empty. Fixes bug
	#473303